add package rule